// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PanelContent should apply the correct styles 1`] = `
<div
  style="height: 200px;"
>
  <div
    class="md-panel-content some-test"
    style="background: red;"
  />
  <footer
    class="md-dialog-footer md-dialog-footer--stacked md-divider-border md-divider-border--top"
  >
    <button
      class="md-btn md-btn--flat md-btn--text md-pointer--hover md-text md-inline-block md-btn--dialog"
      type="button"
    >
      <div
        class="md-ink-container"
      />
      Cancel
    </button>
    <button
      class="md-btn md-btn--flat md-btn--text md-pointer--hover md-text md-inline-block md-btn--dialog"
      type="button"
    >
      <div
        class="md-ink-container"
      />
      Save
    </button>
  </footer>
</div>
`;

exports[`PanelContent should render correctly based on props 1`] = `
<div>
  <div
    class="md-panel-content"
  />
  <footer
    class="md-dialog-footer md-dialog-footer--inline md-divider-border md-divider-border--top"
  >
    <button
      class="md-btn md-btn--flat md-btn--text md-pointer--hover md-text md-inline-block md-btn--dialog"
      type="reset"
    >
      <div
        class="md-ink-container"
      />
      Cancel
    </button>
    <button
      class="md-btn md-btn--flat md-btn--text md-pointer--hover md-text--theme-secondary md-ink--secondary md-inline-block md-btn--dialog"
      type="submit"
    >
      <div
        class="md-ink-container"
      />
      Save
    </button>
  </footer>
</div>
`;

exports[`PanelContent should render correctly based on props 2`] = `
<div>
  <div
    class="md-panel-content"
  />
  <footer
    class="md-dialog-footer md-dialog-footer--inline md-divider-border md-divider-border--top"
  >
    <button
      class="md-btn md-btn--flat md-btn--text md-pointer--hover md-text md-inline-block md-btn--dialog"
      type="reset"
    >
      <div
        class="md-ink-container"
      />
      Cancel
    </button>
    <button
      class="md-btn md-btn--flat md-btn--text md-pointer--hover md-text--theme-primary md-ink--primary md-inline-block md-btn--dialog"
      type="submit"
    >
      <div
        class="md-ink-container"
      />
      Save
    </button>
  </footer>
</div>
`;
